--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,19 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
+    "app/(tabs)/App.tsx",
     "expo-env.d.ts"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
