--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "es5",
+    "lib": ["es2015", "dom"],
   },
   "include": [
     "**/*.ts",
