--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "biome": "biome check .",
+  "biome:check": "biome check .",
+  "biome:fix": "biome check --apply",
+  "biome:format": "biome format ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -64,6 +68,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
+    "biome": "^0.3.3",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
