--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "biome": "biome check .",
-  "biome:check": "biome check .",
-  "biome:fix": "biome check --apply",
-  "biome:format": "biome format ."
+    "biome:check": "biome check .",
+    "biome:fix": "biome check --apply",
+    "biome:format": "biome format ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -31,6 +31,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@types/react": "~18.3.12",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -47,6 +48,7 @@
     "firebase": "^11.4.0",
     "jest-expo": "~52.0.6",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.7",
     "react-native-gesture-handler": "~2.20.2",
