--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.7",
+    "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
@@ -69,6 +70,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-calendars": "^1.1264.7",
     "@types/react-test-renderer": "^18.3.0",
     "biome": "^0.3.3",
     "jest": "^29.2.1",
