--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "react-router-dom": "^6.29.0"
+    "react-router-dom": "^6.29.0",
+    "react-speech-recognition": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -75,6 +76,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-native": "^0.72.8",
     "@types/react-native-calendars": "^1.1264.7",
+    "@types/react-speech-recognition": "^3.9.6",
     "@types/react-test-renderer": "^18.3.0",
     "biome": "^0.3.3",
     "jest": "^29.2.1",
