--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "react-router-dom": "^6.29.0",
-    "react-speech-recognition": "^4.0.1"
+    "react-speech-recognition": "^4.0.1",
+    "tailwind-rn": "^4.2.0",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
